<resources>
    <string name="app_name">NoteIT</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="show_notes">Show all notes</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="categoryPersonal">Personal</string>
    <string name="categoryProfessional">Professional</string>
    <string name="personal_notes">Personal Notes</string>
    <string name="professional_notes">Professional Notes</string>
    <string name="add_image">Add Image</string>
    <string name="search_for_a_note">Search for a note</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>
</resources>
